# RUBIKS_CUBE

./: BFSSolver.h  CMakeLists.txt  CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  DFSSolver.h  GenericRubiksCube.cpp  GenericRubiksCube.h  IDAStarSolver.h  IDDFSSolver.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  RubiksCube3d.cpp  RubiksCubeBitboard.cpp  main.cpp  math.cpp  math.h
